--- a/PanstwaMiastaWinForms/PanstwaMiastaWinForms.csproj
+++ b/PanstwaMiastaWinForms/PanstwaMiastaWinForms.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameFinished.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GameFinished.Designer.cs">
+      <DependentUpon>GameFinished.cs</DependentUpon>
+    </Compile>
     <Compile Include="GameLogic.cs" />
     <Compile Include="MainMenu.cs">
       <SubType>Form</SubType>
@@ -88,6 +94,9 @@
       <DependentUpon>Starting.cs</DependentUpon>
     </Compile>
     <Compile Include="Model.cs" />
+    <EmbeddedResource Include="GameFinished.resx">
+      <DependentUpon>GameFinished.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </EmbeddedResource>
